--- a/.gitignore
+++ b/.gitignore
@@ -151,4 +151,5 @@ Carthage/Checkouts
 /*.gcno
 **/xcshareddata/WorkspaceSettings.xcsettings
 
+.DS_Store
 # End of https://www.gitignore.io/api/swift,xcode,cocoapods
